--- a/Assignments/PriyaRathod_A03_DataExploration.Rmd
+++ b/Assignments/PriyaRathod_A03_DataExploration.Rmd
@@ -34,12 +34,12 @@ This exercise accompanies the lessons in Environmental Data Analytics on Data Ex
 
 ```{r,  message = FALSE}
 
-#library(tidyverse) ##loading packages
-#library(lubridate)
+library(tidyverse) ##loading packages
+library(lubridate)
 #install.packages("here")
-#library(here)
-#library(dplyr)
-#library(pivottabler)
+library(here)
+library(dplyr)
+library(pivottabler)
 
 getwd() ## checking working directory
 
