--- a/Assignments/PriyaRathod_A05_DataVisualization.Rmd
+++ b/Assignments/PriyaRathod_A05_DataVisualization.Rmd
@@ -86,7 +86,9 @@ For numbers 4-7, create ggplot graphs and adjust aesthetics to follow best pract
 ```{r plot total P vs PO4}
 #4 
 
-plot_nutrients <- ggplot(lake_chem_nutrients, aes(x = tp_ug, y = po4, color = lakename)) + xlim(0,150) + ylim(0,50) + geom_smooth(method=lm) + labs(title = "Phosphorus and Nitrogen - Peter and Paul Lakes",
+plot_nutrients <- ggplot(lake_chem_nutrients, aes(x = tp_ug, y = po4, color = lakename)) +
+  xlim(0,150) + ylim(0,50) + geom_smooth(method=lm) + 
+  labs(title = "Phosphorus and Nitrogen - Peter and Paul Lakes",
 x = "Phosphorus in mg/L", y = "Nitrogen in mg/L") + geom_point() + scale_color_manual(values = c("#7fcdbb", "#225ea8"))
 print(plot_nutrients)
 
@@ -117,7 +119,10 @@ plot_temp <-
   ggplot(lake_chem_nutrients, aes(x = month, y = temperature_C, 
  color = lakename)) +
   geom_boxplot() + scale_x_discrete(limits = as.character(1:12), labels =  c(month)) + mytheme +
-  labs(title = "Monthly Temperature - Peter and Paul Lakes", x = "Month", y = "Temperature in °C") + theme(legend.position = "right") + theme(axis.text.x = element_text(angle = 45, hjust = 1)) + theme(axis.text=element_text(size=8)) + 
+  labs(title = "Monthly Temperature - Peter and Paul Lakes", 
+       x = "Month", y = "Temperature in °C") + 
+  theme(legend.position = "right") + 
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) + theme(axis.text=element_text(size=8)) + 
   scale_color_manual(values = c("#2246be", "#1d9a0c"))
 print(plot_temp)
 
@@ -126,7 +131,10 @@ plot_tp <-
   ggplot(lake_chem_nutrients, aes(x = month, y = tp_ug,
  color = lakename)) +
   geom_boxplot() + scale_x_discrete(limits = as.character(1:12), labels =  c(month)) + mytheme +
-  labs(title = "Total Phosphorus by Month - Peter and Paul Lakes", x = "Month", y = "Phosphorus in mg/L") + theme(legend.position = "right") + theme(axis.text.x = element_text(angle = 45, hjust = 1)) + theme(axis.text=element_text(size=8)) + 
+labs(title = "Total Phosphorus by Month - Peter and Paul Lakes",
+     x = "Month", y = "Phosphorus in mg/L") +
+  theme(legend.position = "right") + 
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) + theme(axis.text=element_text(size=8)) + 
   scale_color_manual(values = c("#2246be", "#1d9a0c"))
 print(plot_tp)
 
@@ -134,8 +142,10 @@ print(plot_tp)
 plot_tn <-
   ggplot(lake_chem_nutrients, aes(x = month, y = tn_ug,
 color = lakename)) +
-  geom_boxplot() + scale_x_discrete(limits = as.character(1:12), labels =  c(month)) + mytheme +
-  labs(title = "Total Nitrogen by Month - Peter and Paul Lakes", x = "Month", y = "Nitrogen in mg/L") + theme(legend.position = "right") + theme(axis.text.x = element_text(angle = 45, hjust = 1)) + theme(axis.text=element_text(size=8)) + 
+  geom_boxplot() + scale_x_discrete(limits = as.character(1:12), 
+        labels =  c(month)) + mytheme +
+  labs(title = "Total Nitrogen by Month - Peter and Paul Lakes", x = "Month",
+       y = "Nitrogen in mg/L") + theme(legend.position = "right") + theme(axis.text.x = element_text(angle = 45, hjust = 1)) + theme(axis.text=element_text(size=8)) + 
   scale_color_manual(values = c("#2246be", "#1d9a0c"))
 print(plot_tn)
 
@@ -190,17 +200,27 @@ needle_litter <- needle_litter %>%
 plot_needle <-
   ggplot(needle_litter, aes(x = year, y = dryMass,
  color = nlcdClass)) + geom_point() + mytheme +
-  labs(title = "Annual Needle Litter Mass (2016-2019)", x = "Year", y = "Dry mass in Kg", color = "Land use type") + theme(legend.position = "right") + theme(axis.text.x = element_text(angle = 45, hjust = 1)) + theme(axis.text=element_text(size=8)) + scale_color_manual(values = c("#ea5d0d", "#1d9a0c", "#600c9a"))
+  labs(title = "Annual Needle Litter Mass (2016-2019)", x = "Year",
+       y = "Dry mass in Kg", color = "Land use type") + 
+  theme(legend.position = "right") + 
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) + theme(axis.text=element_text(size=8)) + 
+  scale_color_manual(values = c("#ea5d0d", "#1d9a0c", "#600c9a"))
 print(plot_needle)
   
 #7 [Niwot Ridge] Now, plot the same plot but with NLCD classes separated into three facets rather than separated by color. 
 
 plot_needle_facets <-
-  ggplot(needle_litter, aes(x = year, y = dryMass)) + geom_point(size=1) + mytheme + labs(title = "Annual Needle Litter Mass (2016-2019)", x = "Year", y = "Dry mass in Kg", color = "Land use type") + theme(legend.position = "right") + theme(axis.text.x = element_text(angle = 45, hjust = 1)) + theme(axis.text=element_text(size=8)) + facet_wrap(vars(nlcdClass), nrow = 3)
+  ggplot(needle_litter, aes(x = year, y = dryMass)) +
+  geom_point(size=1) + mytheme + labs(title = "Annual Needle Litter Mass (2016-2019)", x = "Year", y = "Dry mass in Kg", color = "Land use type") + theme(legend.position = "right") + 
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) + theme(axis.text=element_text(size=8)) +
+  facet_wrap(vars(nlcdClass), nrow = 3)
 print(plot_needle_facets)
 
 plot_needle_facets_colors <-
-  ggplot(needle_litter, aes(x = year, y = dryMass, color = nlcdClass)) + geom_point(size=1) + mytheme + labs(title = "Annual Needle Litter Mass (2016-2019)", x = "Year", y = "Dry mass in Kg", color = "Land use type") + theme(legend.position = "right") + theme(axis.text.x = element_text(angle = 45, hjust = 1)) + theme(axis.text=element_text(size=8)) + facet_wrap(vars(nlcdClass), nrow = 3) + scale_color_manual(values = c("#ea5d0d", "#1d9a0c", "#600c9a"))
+  ggplot(needle_litter, aes(x = year, y = dryMass, color = nlcdClass)) + geom_point(size=1) + mytheme + labs(title = "Annual Needle Litter Mass (2016-2019)", 
+x = "Year", y = "Dry mass in Kg", color = "Land use type") +
+theme(legend.position = "right") + 
+theme(axis.text.x = element_text(angle = 45, hjust = 1)) + theme(axis.text=element_text(size=8)) + facet_wrap(vars(nlcdClass), nrow = 3) + scale_color_manual(values = c("#ea5d0d", "#1d9a0c", "#600c9a"))
 print(plot_needle_facets_colors)
 
 
